``` feat(frontend): 更新测试连接按钮支持左右键不同功能
更新了前端界面中的“测试连接”按钮，现在左键点击用于测试连接，
右键点击用于执行登录操作。同时引入 `TestConnection` 函数来处理
连接测试逻辑，并展示详细结果。

此外，将退出按钮的行为从隐藏窗口改为完全退出应用，并升级了相关依赖。
```

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,7 +76,7 @@
 
     <div id="buttons" class="rgrid-item">
         <s-switch checked="false" id="autostartindex"></s-switch>
-        <s-button id="testconnectindex"> 测试连接 </s-button>
+        <s-button id="testconnectindex"> 测试连接 (左键) / 登录 (右键) </s-button>
     </div>
 
 </div>
