``` feat(network): 添加校园网登录页面自动检测功能
新增网络状态检测与登录页面自动识别逻辑，支持一键自动检测并保存登录 URL。
同时更新前端界面，增加“自动检测登录页面”按钮，并展示详细的网络状态信息。
```

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,7 @@
       </div>
       <div class="rgrid-item">
           <s-text-field label="请输入网页" id="webindex"></s-text-field>
+          <s-button id="detectLoginPage" style="margin-top: 8px; width: 100%;">自动检测登录页面</s-button>
       </div>
 
       <div class="grid-item">
