``` feat(docs): 更新IFLOW.md文档内容
新增智能网页检测和网络状态检测功能说明，调整核心功能列表顺序以反映新特性。

feat(ui): 优化前端界面布局与按钮样式

调整文本框和按钮的样式，改进网格布局间距，增强UI组件响应式表现。

feat(auth): 实现智能登录页面检测机制

通过访问测试网站并分析重定向链，自动识别校园网认证页面URL。

feat(network): 添加网络连通性与认证需求检测

实时检测网络状态，判断是否需要进行校园网认证，并提供状态信息展示。
```

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,9 +25,9 @@
       <div class="grid-item">
           <h2>网页</h2>
       </div>
-      <div class="rgrid-item">
-          <s-text-field label="请输入网页" id="webindex"></s-text-field>
-          <s-button id="detectLoginPage" style="margin-top: 8px; width: 100%;">自动检测登录页面</s-button>
+      <div class="rgrid-item" style="flex-direction: column; align-items: stretch;">
+          <s-text-field label="请输入网页" id="webindex" style="width: 100%; margin-bottom: 8px;"></s-text-field>
+          <s-button id="detectLoginPage" style="width: 100%;">自动检测</s-button>
       </div>
 
       <div class="grid-item">
@@ -77,7 +77,7 @@
 
     <div id="buttons" class="rgrid-item">
         <s-switch checked="false" id="autostartindex"></s-switch>
-        <s-button id="testconnectindex"> 测试连接 (左键) / 登录 (右键) </s-button>
+        <s-button id="testconnectindex">测试连接/登录</s-button>
     </div>
 
 </div>
