--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,7 +77,7 @@
 
     <div id="buttons" class="rgrid-item">
         <s-switch checked="false" id="autostartindex"></s-switch>
-        <s-button id="testconnectindex">测试连接/登录</s-button>
+        <s-button id="testconnectindex">登录</s-button>
     </div>
 
 </div>
