``` feat(frontend): 重构界面布局与样式提升用户体验
- 调整 HTML 结构，将退出按钮移出 right-panel 并优化其定位方式
- 重新组织配置面板和登录区域的结构，增强可读性和维护性
- 美化退出按钮样式，增加悬停动画效果和视觉反馈
- 优化 CSS 样式系统，引入明暗主题变量并改进组件外观
- 增加字体定义和整体排版调整，提升界面美观度
- 改进自动检测按钮的状态显示逻辑与提示文案
- 更新网络状态提示信息，提供更清晰的操作反馈
```

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,79 +8,77 @@
 <body>
 
 <s-page theme="auto">
+    <!-- 退出按钮移出 right-panel，或保持绝对定位 -->
+    <button id="exit" title="退出程序">✕</button>
 
-    <div class="right-panel"></div>
+    <div class="right-panel">
+        
+        <div id="config">
+            <div class="rgrid-item" id="title-container">
+                <h1>YzuAutologin</h1>
+            </div>
 
-<button id="exit">X</button>
+            <div class="grid-container">
+                <!-- 网页 -->
+                <div class="grid-item">
+                    <h2>网页</h2>
+                </div>
+                <div class="rgrid-item" style="flex-direction: column; width: 100%;">
+                    <s-text-field placeholder="1.1.1.1" id="webindex"></s-text-field>
+                    <s-button id="detectLoginPage" type="text">
+                        <span style="font-size: 12px;">🔍 自动检测网址</span>
+                    </s-button>
+                </div>
 
-<div id="config">
-  <div class="grid-container">
+                <!-- 账号 -->
+                <div class="grid-item">
+                    <h2>账号</h2>
+                </div>
+                <div class="rgrid-item">
+                    <s-text-field placeholder="学号/工号" id="countindex"></s-text-field>
+                </div>
 
-    <div></div>
+                <!-- 密码 -->
+                <div class="grid-item">
+                    <h2>密码</h2>
+                </div>
+                <div class="rgrid-item">
+                    <s-text-field type="password" placeholder="••••••" id="passwordindex"></s-text-field>
+                </div>
 
-      <div id="title" class="rgrid-item">
-        <h1>YzuAutologin</h1>
-      </div>
+                <!-- 运营商 -->
+                <div class="grid-item">
+                    <h2>运营商</h2>
+                </div>
+                <div class="rgrid-item">
+                    <s-segmented-button id="operatorindex">
+                        <s-segmented-button-item value="a">校园</s-segmented-button-item>
+                        <s-segmented-button-item value="b">联通</s-segmented-button-item>
+                        <s-segmented-button-item value="c">移动</s-segmented-button-item>
+                        <s-segmented-button-item value="d">电信</s-segmented-button-item>
+                    </s-segmented-button>
+                </div>
 
-      <div class="grid-item">
-          <h2>网页</h2>
-      </div>
-      <div class="rgrid-item" style="flex-direction: column; align-items: stretch;">
-          <s-text-field label="请输入网页" id="webindex" style="width: 100%; margin-bottom: 8px;"></s-text-field>
-          <s-button id="detectLoginPage" style="width: 100%;">自动检测</s-button>
-      </div>
+                <s-divider></s-divider>
+            </div>
+        </div>
 
-      <div class="grid-item">
-          <h2>账号</h2>
-      </div>
-      <div class="rgrid-item">
-          <s-text-field label="请输入账号" id="countindex"></s-text-field>
-      </div>
+        <div id="login">
+            <div class="grid-container">
+                <div class="grid-item">
+                    <h2>自启动</h2>
+                </div>
+                <div id="buttons" class="rgrid-item">
+                    <s-switch id="autostartindex"></s-switch>
+                    <!-- 加上 type="tonal" 或 "filled" 如果 sober 支持，增加视觉权重 -->
+                    <s-button id="testconnectindex" style="background-color: var(--primary-color); color: white;">
+                        立即登录
+                    </s-button>
+                </div>
+            </div>
+        </div>
 
-      <div class="grid-item">
-          <h2>密码</h2>
-      </div>
-      <div class="rgrid-item">
-          <s-text-field type="password" label="请输入密码" id="passwordindex"></s-text-field>
-      </div>
-
-      <div class="grid-item">
-          <h2>运营商</h2>
-      </div>
-      <div class="rgrid-item" >
-          <s-segmented-button id="operatorindex">
-              <s-segmented-button-item value="a">
-                校园网
-              </s-segmented-button-item>
-              <s-segmented-button-item value="b">
-                  联通
-              </s-segmented-button-item>
-              <s-segmented-button-item value="c">
-                  移动
-              </s-segmented-button-item>
-              <s-segmented-button-item value="d">
-                  电信
-              </s-segmented-button-item>
-          </s-segmented-button>
-      </div>
-
-      <s-divider class="rgrid-item"></s-divider>
-
-  </div>
-</div>
-
-<div id="login" class="grid-container">
-
-    <div class="grid-item">
-        <h2>自动启动</h2>
     </div>
-
-    <div id="buttons" class="rgrid-item">
-        <s-switch checked="false" id="autostartindex"></s-switch>
-        <s-button id="testconnectindex">登录</s-button>
-    </div>
-
-</div>
 
 </s-page>
 
